# iCubSpeechRecognition

./: CMakeLists.txt  continuous.c  recognize.cpp  recognizer.py  sound_receiver.cpp
model/: icub_cmd.corpus  icub_cmd.dic  icub_cmd.lm
python/: play.py  recognize.py  recognizer.py
src/SpeechRecognizer/: CMakeLists.txt
src/SpeechRecognizer/src/: speech_recognizer.cpp
